--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,20 @@
 .container {
+    max-width: 900px;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    margin: 0 auto;
 }
 
 .input {
-    display: flex;
-    flex-direction: row;
-    gap: 100px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0;
 }
 
 .inputGroup {
@@ -19,6 +22,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 160px;
+    width: 100%;
 }
 
 label {
@@ -33,11 +38,18 @@ label {
 input {
     border: none;
     background: transparent;
-    font-size: 300px;
-    width: 350px;
     font-weight: 500;
     text-align: center;
+    width: 100%;
+    font-size: 8rem;
 }
+
+@media (max-width: 460px) {
+    input {
+        width: 80%;
+    }
+}
+
 input:focus {
     border: none;
     box-shadow: none;
